# Production-Ready-Fraud-Detection-System-with-CI-CD

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: train-on-new-staging-file.yml
App/: .dockerignore  dockerfile  hgb_best_v1.pkl  main.py  requirements.txt
Pyhton Notebooks/: 01_Data_Profiling.ipynb  02_Data_Exploration.ipynb  03_Data_Processing.ipynb  04_ML_training1.ipynb  05_ML_training2.ipynb
Pyhton Notebooks/mlruns/0/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/20403ebc53054d538a75e215bbb59928/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/20403ebc53054d538a75e215bbb59928/metrics/: accuracy  f1_score  precision  recall
Pyhton Notebooks/mlruns/241460597891315312/74b65f5770a7481fabb715974e7f6b17/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/b5e88b58a3354cb7b0e4dd96ce83a5b7/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/bbde0b3be4d74c26872527e8d5035ab5/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/cca5e984bc5e40cb93e3705ec7ea5eea/: meta.yaml
Pyhton Notebooks/mlruns/241460597891315312/d5d5e374f03d4230a4e752bb811b4055/: meta.yaml
Pyhton Notebooks/mlruns/349176769272931575/: meta.yaml
Pyhton Notebooks/mlruns/349176769272931575/4d7ecd96ec7e4890a65d245a4edb15ca/: meta.yaml
Pyhton Notebooks/mlruns/349176769272931575/ec8debd2583b44a2ae0ea1156e011345/: meta.yaml
Python_Scripts/: preprocess.py  train.py
Testing/: 01_API_test.ipynb  sample.csv  temp.ipynb
mlruns/0/: meta.yaml
(+63 files in other folders)
