[project]
name = "production-ready-fraud-detection-system-with-ci-cd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]==0.115.12",
    "imblearn==0.0",
    "ipykernel==6.29.5",
    "joblib==1.5.0",
    "jupyter==1.1.1",
    "lightgbm==4.6.0",
    "matplotlib==3.10.0",
    "mlflow==2.22.0",
    "notebook==7.4.1",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "plotly==6.0.1",
    "prometheus-client==0.21.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.4",
    "pytest==8.3.5",
    "python-dotenv==1.1.0",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "sqlalchemy==2.0.40",
    "sweetviz==2.3.1",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
    "uvicorn==0.34.2",
    "xgboost==3.0.0",
    "ydata-profiling==4.16.1",
]
